base/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    app: nginx
